--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"react-dom": "18.3.1"
 	},
 	"devDependencies": {
+		"@hookform/error-message": "^2.0.1",
 		"@msocial/eslint-config": "^0.2.1",
 		"@msocial/prettier-config": "^0.2.0",
 		"@types/node": "20.5.7",
@@ -40,21 +41,25 @@
 		"@typescript-eslint/eslint-plugin": "^8.7.0",
 		"@typescript-eslint/parser": "^8.7.0",
 		"autoprefixer": "10.4.19",
+		"axios": "^1.7.7",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
+		"html-react-parser": "^5.1.16",
 		"postcss": "8.4.38",
 		"prettier": "^3.3.3",
+		"react-hook-form": "^7.53.0",
+		"sass": "^1.79.3",
 		"tailwind-variants": "0.1.20",
 		"tailwindcss": "3.4.3",
 		"typescript": "5.0.4"
 	},
 	"lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --quiet --fix",
-      "prettier --write --ignore-unknown"
-    ],
-    "*.{json,html}": [
-      "prettier --write --ignore-unknown"
-    ]
-  }
+		"*.{js,jsx,ts,tsx}": [
+			"eslint --quiet --fix",
+			"prettier --write --ignore-unknown"
+		],
+		"*.{json,html}": [
+			"prettier --write --ignore-unknown"
+		]
+	}
 }
