--- a/package.json
+++ b/package.json
@@ -3,21 +3,13 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbo",
+		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint",
-		"prettier": "npx prettier --write --ignore-unknown ./src"
+		"lint": "next lint"
 	},
 	"dependencies": {
 		"@nextui-org/button": "2.0.38",
-		"@nextui-org/code": "2.0.33",
-		"@nextui-org/input": "2.2.5",
-		"@nextui-org/kbd": "2.0.34",
-		"@nextui-org/link": "2.0.35",
-		"@nextui-org/listbox": "2.1.27",
-		"@nextui-org/navbar": "2.0.37",
-		"@nextui-org/snippet": "2.0.43",
 		"@nextui-org/switch": "2.0.34",
 		"@nextui-org/system": "2.2.6",
 		"@nextui-org/theme": "2.2.11",
@@ -29,7 +21,8 @@
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
-		"react-dom": "18.3.1"
+		"react-dom": "18.3.1",
+		"react-text-mask": "^5.5.0"
 	},
 	"devDependencies": {
 		"@hookform/error-message": "^2.0.1",
@@ -38,6 +31,7 @@
 		"@types/node": "20.5.7",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
+		"@types/react-text-mask": "^5.4.14",
 		"@typescript-eslint/eslint-plugin": "^8.7.0",
 		"@typescript-eslint/parser": "^8.7.0",
 		"autoprefixer": "10.4.19",
@@ -52,14 +46,5 @@
 		"tailwind-variants": "0.1.20",
 		"tailwindcss": "3.4.3",
 		"typescript": "5.0.4"
-	},
-	"lint-staged": {
-		"*.{js,jsx,ts,tsx}": [
-			"eslint --quiet --fix",
-			"prettier --write --ignore-unknown"
-		],
-		"*.{json,html}": [
-			"prettier --write --ignore-unknown"
-		]
 	}
 }
