--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,5 +5,6 @@
   "rules": {
     "@typescript-eslint/no-unsafe-call": "off",
     "@typescript-eslint/no-unsafe-assignment": "off"
+    //  "jsx-a11y/no-static-element-interactions": "off"
   }
 }
