--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"next": "14.2.4",
+		"next-nprogress-bar": "^2.3.13",
 		"next-themes": "^0.2.1",
-		"nextjs-toploader": "^3.6.15",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-text-mask": "^5.5.0"
