#add new template

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,1 @@
-{
-  "extends": [
-    "@msocial/eslint-config/next"
-  ],
-  "rules": {
-    "@typescript-eslint/no-unsafe-call": "off",
-    "@typescript-eslint/no-unsafe-assignment": "off",
-    "@typescript-eslint/no-misused-promises": "off"
-  }
-}
+{"extends": ["@msocial/eslint-config/next"]}
