--- a/package.json
+++ b/package.json
@@ -1,60 +1,50 @@
 {
-	"name": "next-app-template",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"@nextui-org/accordion": "^2.0.40",
-		"@nextui-org/button": "2.0.38",
-		"@nextui-org/popover": "^2.1.29",
-		"@nextui-org/switch": "2.0.34",
-		"@nextui-org/system": "2.2.6",
-		"@nextui-org/theme": "2.2.11",
-		"@react-aria/ssr": "3.9.4",
-		"@react-aria/visually-hidden": "3.8.12",
-		"clsx": "2.1.1",
-		"date-fns": "^4.1.0",
-		"eslint-config-next": "^14.2.15",
-		"framer-motion": "~11.1.1",
-		"intl-messageformat": "^10.5.0",
-		"js-cookie": "^3.0.5",
-		"next": "^14.2.15",
-		"next-nprogress-bar": "^2.3.13",
-		"next-themes": "^0.2.1",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
-		"react-select": "^5.8.1",
-		"react-text-mask": "^5.5.0",
-		"simplebar-react": "^3.2.6",
-		"swiper": "^11.1.14"
-	},
-	"devDependencies": {
-		"@hookform/error-message": "^2.0.1",
-		"@msocial/eslint-config": "^0.2.1",
-		"@msocial/prettier-config": "^0.2.0",
-		"@types/js-cookie": "^3.0.6",
-		"@types/node": "20.5.7",
-		"@types/react": "18.3.3",
-		"@types/react-dom": "18.3.0",
-		"@types/react-text-mask": "^5.4.14",
-		"@typescript-eslint/eslint-plugin": "^8.7.0",
-		"@typescript-eslint/parser": "^8.7.0",
-		"autoprefixer": "10.4.19",
-		"axios": "^1.7.7",
-		"eslint": "^8.57.0",
-		"eslint-config-prettier": "^9.1.0",
-		"html-react-parser": "^5.1.16",
-		"postcss": "8.4.38",
-		"prettier": "^3.3.3",
-		"react-hook-form": "^7.53.0",
-		"sass": "^1.79.3",
-		"tailwind-variants": "0.1.20",
-		"tailwindcss": "3.4.3",
-		"typescript": "5.0.4"
-	}
+  "name": "nlmk-landing-fistashki",
+  "version": "0.1.0",
+  "private": true,
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "prettier": "npx prettier --write --ignore-unknown ./src",
+    "prepare": "cd ../.. && husky .husky"
+  },
+  "dependencies": {
+    "next": "14.2.14",
+    "prettier": "^3.3.3",
+    "react": "^18",
+    "react-dom": "^18"
+  },
+  "devDependencies": {
+    "@msocial/eslint-config": "^0.2.1",
+    "@msocial/prettier-config": "^0.2.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.14",
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "typescript": "^5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --quiet --fix",
+      "prettier --write --ignore-unknown"
+    ],
+    "*.{json,html}": [
+      "prettier --write --ignore-unknown"
+    ]
+  }
 }
