--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "prepare": "cd ../.. && husky .husky"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "14.2.14",
+    "next-nprogress-bar": "^2.3.14",
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18"
@@ -31,6 +33,7 @@
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
+    "sass": "^1.80.4",
     "typescript": "^5"
   },
   "husky": {
