--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "next": "14.2.14",
-    "next-nprogress-bar": "^2.3.14",
+    "nextjs-toploader": "^3.7.15",
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18"
