--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nlmk-landing-fistashki",
+  "name": "next-js-template",
   "version": "0.1.0",
   "private": true,
   "main": "index.js",
