--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nextjs-toploader": "^3.7.15",
     "prettier": "^3.3.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "simplebar-react": "^3.2.6"
   },
   "devDependencies": {
     "@msocial/eslint-config": "^0.2.1",
