--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "html-react-parser": "^5.1.18",
     "next": "14.2.14",
     "nextjs-toploader": "^3.7.15",
     "prettier": "^3.3.3",
@@ -31,7 +32,7 @@
     "@typescript-eslint/parser": "^8.8.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "^9.1.0", 
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "sass": "^1.80.4",
