--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "prepare": "cd ../.. && husky .husky"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "cookies-next": "^4.3.0",
     "html-react-parser": "^5.1.18",
+    "js-cookie": "^3.0.5",
     "next": "14.2.14",
     "nextjs-toploader": "^3.7.15",
     "prettier": "^3.3.3",
@@ -25,6 +28,7 @@
   "devDependencies": {
     "@msocial/eslint-config": "^0.2.1",
     "@msocial/prettier-config": "^0.2.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -32,7 +36,7 @@
     "@typescript-eslint/parser": "^8.8.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
-    "eslint-config-prettier": "^9.1.0", 
+    "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "sass": "^1.80.4",
