--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,1 +1,1 @@
-{"extends": ["@msocial/eslint-config/next"]}
+{"extends": ["@msocial/eslint-config/next"], "rules": { "@typescript-eslint/no-misused-promises": "off"}}
