--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "cd ../.. && husky .husky"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "cookies-next": "^4.3.0",
@@ -25,7 +26,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
     "react-text-mask": "^5.5.0",
-    "simplebar-react": "^3.2.6"
+    "simplebar-react": "^3.2.6",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@msocial/eslint-config": "^0.2.1",
