--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "react-select": "^5.8.2",
     "react-text-mask": "^5.5.0",
     "simplebar-react": "^3.2.6",
     "zod": "^3.23.8"
