--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nextjs-toploader": "^3.7.15",
     "prettier": "^3.3.3",
     "react": "^18",
+    "react-day-picker": "^9.3.2",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
     "react-select": "^5.8.2",
