--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@hookform/resolvers": "^3.9.1",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "html-react-parser": "^5.1.18",
     "js-cookie": "^3.0.5",
     "next": "14.2.14",
     "nextjs-toploader": "^3.7.15",
     "prettier": "^3.3.3",
     "react": "^18",
-    "react-datetime-picker": "^6.0.1",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
     "react-select": "^5.8.2",
@@ -39,9 +40,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-text-mask": "^5.4.14",
-    "eslint": "^8.57.0",
-		"@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.14",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.6",
