--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@types/react-dom": "^18",
     "@types/react-text-mask": "^5.4.14",
     "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
     "eslint-config-next": "14.2.14",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
