--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.2.14",
     "nextjs-toploader": "^3.7.15",
     "prettier": "^3.3.3",
+    "rc-slider": "^11.1.8",
     "react": "^18",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
@@ -40,9 +41,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-text-mask": "^5.4.14",
-    "eslint": "^8.57.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.14",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
