--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^4.1.0",
     "html-react-parser": "^5.1.18",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "next": "14.2.14",
     "nextjs-toploader": "^3.7.15",
     "prettier": "^3.3.3",
