--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-select": "^5.8.2",
     "react-text-mask": "^5.5.0",
     "simplebar-react": "^3.2.6",
+    "swiper": "^11.2.1",
     "text-mask-addons": "^3.8.0",
     "zod": "^3.23.8"
   },
