--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.53.1",
     "react-select": "^5.8.2",
     "react-text-mask": "^5.5.0",
+    "sharp": "^0.33.5",
     "simplebar-react": "^3.2.6",
     "swiper": "^11.2.1",
     "text-mask-addons": "^3.8.0",
