--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ NEXT_PUBLIC_BUILD_PROFILE=local
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 NEXT_PUBLIC_STORAGE_PATHNAME=/storage
 NEXT_PUBLIC_STORAGE_URL=${NEXT_PUBLIC_SITE_URL}${NEXT_PUBLIC_STORAGE_PATHNAME}
-NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_SITE_URL}/api
+NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_SITE_URL}/api/
 NEXT_PUBLIC_YANDEX_METRIKA_ENABLED=
 NEXT_PUBLIC_YANDEX_METRIKA_KEY=
 NEXT_PUBLIC_GOOGLE_ANALYTICS_ENABLED=
