--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -1,14 +1,21 @@
 # BUILDER
-FROM node:20-alpine AS builder
+FROM node:22-alpine AS builder
+
+ENV PNPM_HOME="/pnpm"
+ENV PATH="$PNPM_HOME:$PATH"
+ENV HUSKY=0
+
+RUN corepack enable && corepack prepare pnpm@9.15.2 --activate
+
 WORKDIR /app
 
-COPY package.json yarn.lock ./
-RUN yarn install --frozen-lockfile
+COPY package.json pnpm-lock.yaml .npmrc ./
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
 COPY . .
-RUN yarn build
+RUN pnpm build
 
 # RUNNER
-FROM node:20-alpine
+FROM node:22-alpine
 WORKDIR /app
 RUN apk add tzdata
 
