--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@msocial/eslint-config": "^0.2.1",
     "@msocial/prettier-config": "^0.2.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
