--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "cd ./ && husky source-code/frontend/.husky"
+    "prettier": "npx prettier --write --ignore-unknown ./src",
+    "prepare": "cd ../.. && husky .husky"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -50,10 +51,18 @@
     "sass": "^1.80.4",
     "typescript": "^5.5.0"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
-		"*.{ts,tsx, js, jsx}": [
-			"prettier -w",
-			"eslint --fix"
-		]
-	}
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --quiet --fix",
+      "prettier --write --ignore-unknown"
+    ],
+    "*.{json,html}": [
+      "prettier --write --ignore-unknown"
+    ]
+  }
 }
