--- a/source-code/frontend/package.json
+++ b/source-code/frontend/package.json
@@ -8,7 +8,7 @@
 		"start": "next start",
 		"lint": "next lint",
 		"prettier": "npx prettier --write --ignore-unknown ./src",
-		"prepare": "cd ../../ && husky .husky"
+		"prepare": "cd ../../ && husky source-code/frontend/.husky"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.1",
