--- a/source-code/frontend/package.json
+++ b/source-code/frontend/package.json
@@ -25,12 +25,11 @@
 		"react-datepicker": "^7.5.0",
 		"react-dom": "^18",
 		"react-hook-form": "^7.53.1",
+		"react-imask": "^7.6.1",
 		"react-select": "^5.8.2",
-		"react-text-mask": "^5.5.0",
 		"sharp": "^0.33.5",
 		"simplebar-react": "^3.2.6",
 		"swiper": "^11.2.1",
-		"text-mask-addons": "^3.8.0",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
@@ -41,7 +40,6 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
-		"@types/react-text-mask": "^5.4.14",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
 		"eslint": "^8.57.0",
