--- a/source-code/frontend/package.json
+++ b/source-code/frontend/package.json
@@ -12,6 +12,9 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.1",
+		"@maskito/core": "^3.2.1",
+		"@maskito/phone": "^3.2.1",
+		"@maskito/react": "^3.2.1",
 		"axios": "^1.7.7",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
