--- a/docker/frontend/context/test/.env
+++ b/docker/frontend/context/test/.env
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_BUILD_PROFILE=test
-NEXT_PUBLIC_SITE_URL=http://localhost:3000
+NEXT_PUBLIC_SITE_URL=
 NEXT_PUBLIC_STORAGE_PATHNAME=/storage
 NEXT_PUBLIC_STORAGE_URL=${NEXT_PUBLIC_SITE_URL}${NEXT_PUBLIC_STORAGE_PATHNAME}
 NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_SITE_URL}/api
