--- a/source-code/frontend/package.json
+++ b/source-code/frontend/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "next-js-template",
+	"name": "frontend",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -37,7 +37,6 @@
 	"devDependencies": {
 		"@msocial/eslint-config": "^0.2.1",
 		"@msocial/prettier-config": "^0.2.0",
-		"@types/js-cookie": "^3.0.6",
 		"@types/lodash": "^4.17.15",
 		"@types/node": "^20",
 		"@types/react": "^18",
