--- a/source-code/frontend/package.json
+++ b/source-code/frontend/package.json
@@ -19,7 +19,6 @@
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"html-react-parser": "^5.1.18",
-		"lodash": "^4.17.21",
 		"next": "14.2.14",
 		"nextjs-toploader": "^3.7.15",
 		"prettier": "^3.3.3",
@@ -32,12 +31,12 @@
 		"sharp": "^0.33.5",
 		"simplebar-react": "^3.2.6",
 		"swiper": "^11.2.1",
+		"usehooks-ts": "^3.1.1",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@msocial/eslint-config": "^0.2.1",
 		"@msocial/prettier-config": "^0.2.0",
-		"@types/lodash": "^4.17.15",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
