--- a/source-code/frontend/.env.example
+++ b/source-code/frontend/.env.example
@@ -1,4 +1,5 @@
-NEXT_PUBLIC_BUILD_PROFILE=local
+NEXT_PUBLIC_BUILD_PROFILE=local 
+# local | development | production
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 NEXT_PUBLIC_STORAGE_PATHNAME=/storage
 NEXT_PUBLIC_STORAGE_URL=${NEXT_PUBLIC_SITE_URL}${NEXT_PUBLIC_STORAGE_PATHNAME}
