#fix - lint warnings

--- a/source-code/frontend/.eslintrc.json
+++ b/source-code/frontend/.eslintrc.json
@@ -1,1 +1,11 @@
-{"extends": ["@msocial/eslint-config/next"], "rules": { "@typescript-eslint/no-misused-promises": "warn"}}
+{
+	"extends": ["@msocial/eslint-config/next"],
+	"rules": {
+		"@typescript-eslint/no-misused-promises": [
+			"error",
+			{
+				"checksVoidReturn": false
+			}
+		]
+	}
+}
