#refactor - aliases scss

--- a/source-code/frontend/tsconfig.json
+++ b/source-code/frontend/tsconfig.json
@@ -18,7 +18,7 @@
 			}
 		],
 		"paths": {
-			"@/styles*": ["./src/shared/styles/*"],
+			"$styles*": ["./src/shared/styles/*"],
 			"$shared/*": ["./src/shared/*"],
 			"$entities/*": ["./src/entities/*"],
 			"$features/*": ["./src/features/*"],
