--- a/source-code/frontend/package.json
+++ b/source-code/frontend/package.json
@@ -40,6 +40,7 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@types/telegram-web-app": "^7.10.1",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
 		"eslint": "^8.57.0",
