--- a/source-code/frontend/package.json
+++ b/source-code/frontend/package.json
@@ -7,7 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"prettier": "npx prettier --write --ignore-unknown ./src",
+		"prettier": "npx prettier --write --ignore-unknown source-code/frontend/src",
 		"prepare": "cd ../../ && husky source-code/frontend/.husky"
 	},
 	"dependencies": {
